--- a/app/index.html
+++ b/app/index.html
@@ -1,72 +1,28 @@
-﻿<!DOCTYPE html>
-<html ng-app>
+<!doctype html>
+<html lang="en" ng-app="myApp">
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <title>NAP Flow</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="css/app.css" rel="stylesheet" type="text/css"/>
-    <!--<link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>-->
+  <meta charset="utf-8">
+  <title>My AngularJS App</title>
+  <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-  <div id="container" class="span4">
-    <header>
-      <div id="banner" class="row">
-        <input type="text" ng-model="name" placeholder="Kieran"/>
-        <h2 id="welcome">Welcome {{name}} to a page of flowing content :-)</h2>
-      </div>     
-    </header>
-    <section>
-      <div id="main1" class="row">
-        <div class="span1">
-          <div class="row">
-            <div id="guidelines">
+  <ul class="menu">
+    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view2">view2</a></li>
+  </ul>
 
-            </div>
-          </div>
-          <div class="row">
-            <div id="countryInformation">
+  <div ng-view></div>
 
-            </div>
-          </div>
-        </div>
-        <div class="span2">
-          <div class="row">
-            <div id="carousel">
+  <div>Angular seed app: v<span app-version></span></div>
 
-            </div>
-          </div>
-        </div>
-        <div class="span1">
-          <div class="row">
-              <div id="caseStudies">
-
-              </div>
-          </div>
-          <div class="row">
-              <div id="globalSupportProgramme">
-
-              </div>
-          </div>
-        </div>
-
-      </div>
-      <div id="mainFooter" class="row">
-        <div id="hazards" class="span1">
-
-        </div>
-        <div id="sectors" class="span1"></div>
-        <div id="dmt" class="span1"></div>
-        <div id="portals" class="span1"></div>
-      </div>
-    </section>
-    <footer>
-      <div class="row">
-        <div id="tail"></div>
-      </div>
-    </footer>
-  </div>
-  <script src="lib/angular/angular.js" type="text/javascript"></script>
-  <script src="lib/jquery-2.0.2.min.js" type="text/javascript"></script>
-  <script src="lib/bootstrap.js" type="text/javascript"></script>
+  <!-- In production use:
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+  -->
+  <script src="lib/angular/angular.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
 </body>
 </html>
