Tablet tidied using same structure as pho/desk

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
       </div>     
     </header>
     <section>
-      <div id="main1" class="row visible-phone hidden-tablet visible-desktop">
+      <div id="main1" class="row visible-phone visible-tablet visible-desktop">
         <div class="span1">
           <div class="row">
             <div id="guidelines" class="row infoBoxBorder">
@@ -71,7 +71,7 @@
               </div>
           </div>
           <div class="row">
-              <div id="globalSupportProgramme" class="row infoBoxBorder">
+              <div id="globalSupportProgramme" class="infoBoxBorder">
                 <div hint="Global Support Programme">
                     <a href="#"><img class="thumbnail" src="img/global-support.png"/></a>
                 </div>
@@ -80,7 +80,7 @@
         </div>
 
       </div>
-      <div id="main1Tablet" class="row hidden-phone visible-tablet hidden-desktop">
+      <div id="main1Tablet" class="row hidden-phone hidden-tablet hidden-desktop">
         <div class="span1">
           <div id="guidelinesTablet">
           </div>
@@ -99,7 +99,7 @@
           </div>
         </div>
       </div>
-      <div id="main2Tablet" class="row hidden-phone visible-tablet hidden-desktop">
+      <div id="main2Tablet" class="row hidden-phone hidden-tablet hidden-desktop">
         <div class="span4">
           <div id="carouselTablet">
 
