--- a/app/index.html
+++ b/app/index.html
@@ -10,113 +10,118 @@
 <body>
   <div id="container" class="span4">
     <header>
-      <div id="banner" class="row visible-phone visible-tablet visible-desktop">
-        <input type="text" ng-model="name" placeholder="Kieran"/>
-        <h2 id="welcome">Welcome {{name}} to a page of flowing content :-)</h2>
-      </div>     
+      <div class="row visible-phone visible-tablet visible-desktop">
+        <div id="banner">
+          <input type="text" ng-model="name" placeholder="Kieran"/>
+          <h2 id="welcome">Welcome {{name}} to a page of flowing content :-)</h2>
+        </div>
+      </div>
     </header>
     <section>
-      <div id="main1" class="row visible-phone visible-tablet visible-desktop">
-        <div class="span1">
-          <div class="row">
-            <div id="guidelines" class="row infoBoxBorder">
-              <div hint="NAP Interactive Guidelines">
-                  <a href="#"><img class="thumbnail" src="img/nap-guidelines.png"/></a>
-                  <!--<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</div>-->
+      <div class="row visible-phone visible-tablet visible-desktop">
+        <div id="main1">
+          <div class="span1">
+            <div class="row">
+              <div id="guidelines" class="infoBoxBorder">
+                <div hint="NAP Interactive Guidelines">
+                    <a href="#"><img src="img/nap-guidelines.png"/></a>
+                    <!--<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</div>-->
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div id="countryInformation">
+
               </div>
             </div>
           </div>
-          <div class="row">
-            <div id="countryInformation">
+          <div id="turntable" class="carousel slide span2">
+            <ol class="carousel-indicators">
+                  <li data-target="#turntable" data-slide-to="0" class="active"></li>
+                  <li data-target="#turntable" data-slide-to="1"></li>
+                  <li data-target="#turntable" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                  <div class="active item">
+                      <img class="slider1" src="" />
+                      <div class="carousel-caption">
+                        <h4>The NAP process</h4>
+                        <p>The NAP is a process to facilitate effective adaptation in countries through reducing vulnerability to climate change, and facilitating integration of adaptation into development.</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <img class="slider2" src="" />
+                      <div class="carousel-caption">
+                        <h4>The technical guidelines for the NAP process</h4>
+                        <p>The technical guidelines for the NAP process are designed to support countries in their planning and implementation of adaptation at the national level.</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <img class="slider3" src="" />
+                      <div class="carousel-caption">
+                        <h4>The NAP Central</h4>
+                        <p>The NAP Central is the main information platform on supporting the NAP process.</p>
+                      </div>
+                  </div>
+              </div>
+              <a class="carousel-control left" href="#turntable" data-slide="prev">&lsaquo;</a>
+              <a class="carousel-control right" href="#turntable" data-slide="next">&rsaquo;</a>
+          </div>
+          <div class="span1">
+            <div class="row">
+                <div id="caseStudies">
 
+                </div>
+            </div>
+            <div class="row">
+                <div id="globalSupportProgramme" class="infoBoxBorder">
+                  <div hint="Global Support Programme">
+                      <a href="#"><img src="img/global-support.png"/></a>
+                  </div>
+                </div>
             </div>
           </div>
+
         </div>
-        <div id="turntable" class="carousel slide span2">
-          <ol class="carousel-indicators">
-                <li data-target="#turntable" data-slide-to="0" class="active"></li>
-                <li data-target="#turntable" data-slide-to="1"></li>
-                <li data-target="#turntable" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="active item">
-                    <img src="img/slider1.jpg" />
-                    <div class="carousel-caption">
-                      <h4>The NAP process</h4>
-                      <p>The NAP is a process to facilitate effective adaptation in countries through reducing vulnerability to climate change, and facilitating integration of adaptation into development.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="img/slider2.jpg" />
-                    <div class="carousel-caption">
-                      <h4>The technical guidelines for the NAP process</h4>
-                      <p>The technical guidelines for the NAP process are designed to support countries in their planning and implementation of adaptation at the national level.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="img/slider3.jpg" />
-                    <div class="carousel-caption">
-                      <h4>The NAP Central</h4>
-                      <p>The NAP Central is the main information platform on supporting the NAP process.</p>
-                    </div>
-                </div>
+      </div>
+      <div class="row visible-desktop visible-tablet">
+        <div id="mainFooter">
+          <div id="hazards" class="span1">
+
+          </div>
+          <div id="sectors" class="span1">
+             <div>
+                <ul>
+                    <li>
+                        <div>
+                            <img src="img/sectorFood.jpg" alt="Agriculture & Food Security" />
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/sectorWater.jpg" alt="Water Resources" />
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/sectorCoastal.jpg" alt="Coastal Zones" />
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/sectorHealth.jpg" alt="Health Options" />
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <a class="carousel-control left" href="#turntable" data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#turntable" data-slide="next">&rsaquo;</a>
-        </div>
-        <div class="span1">
-          <div class="row">
-              <div id="caseStudies">
-
-              </div>
           </div>
-          <div class="row">
-              <div id="globalSupportProgramme" class="infoBoxBorder">
-                <div hint="Global Support Programme">
-                    <a href="#"><img class="thumbnail" src="img/global-support.png"/></a>
-                </div>
-              </div>
-          </div>
+          <div id="dmt" class="span1"></div>
+          <div id="portals" class="span1"></div>
         </div>
-
-      </div>
-      <div id="main1Tablet" class="row hidden-phone hidden-tablet hidden-desktop">
-        <div class="span1">
-          <div id="guidelinesTablet">
-          </div>
-        </div>
-        <div class="span1">
-          <div id="countryInformationTablet">
-
-          </div>
-        </div>
-        <div class="span1">
-          <div id="caseStudiesTablet">
-          </div>
-        </div>
-        <div class="span1">
-          <div id="globalSupportProgrammeTablet">
-          </div>
-        </div>
-      </div>
-      <div id="main2Tablet" class="row hidden-phone hidden-tablet hidden-desktop">
-        <div class="span4">
-          <div id="carouselTablet">
-
-          </div>
-        </div>
-      </div>
-      <div id="mainFooter" class="row visible-desktop visible-tablet">
-        <div id="hazards" class="span1">
-
-        </div>
-        <div id="sectors" class="span1"></div>
-        <div id="dmt" class="span1"></div>
-        <div id="portals" class="span1"></div>
-      </div>
+      </div> 
     </section>
     <footer>
-      <div class="row visible-desktop visible-tablet">
+      <div class="row visible-phone visible-tablet visible-desktop">
         <div id="tail"></div>
       </div>
     </footer>
