--- a/app/index.html
+++ b/app/index.html
@@ -1,133 +1,54 @@
 ﻿<!DOCTYPE html>
-<html ng-app>
+<html ng-app="magazineApp">
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0.0"/>
     <title>NAP Flow</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-ie6.min.css"><![endif]-->
+    <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
     <link href="css/app.css" rel="stylesheet" type="text/css"/>
-    <!--<link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>-->
 </head>
 <body>
-  <div id="container" class="span4">
-    <header>
-      <div class="row visible-phone visible-tablet visible-desktop">
-        <div id="banner">
-          <input type="text" ng-model="name" placeholder="Kieran"/>
-          <h2 id="welcome">Welcome {{name}} to a page of flowing content :-)</h2>
+  <div role="page">
+    <div class="row">
+      <div id="index" class="accordion affix" ng-controller="IndexController">
+        <div class="accordion-heading">
+          <a href="#elementListCollapse" class="accordion-toggle" data-toggle="collapse" data-parent="#index"><i class="icon-align-justify"></i></a>
         </div>
-      </div>
-    </header>
-    <section>
-      <div class="row visible-phone visible-tablet visible-desktop">
-        <div id="main1">
-          <div class="span1">
-            <div class="row">
-              <div id="guidelines" class="infoBoxBorder">
-                <div hint="NAP Interactive Guidelines">
-                    <a href="#"><img src="img/nap-guidelines.png"/></a>
-                    <!--<div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</div>-->
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div id="countryInformation">
-
-              </div>
-            </div>
-          </div>
-          <div id="turntable" class="carousel slide span2">
-            <ol class="carousel-indicators">
-                  <li data-target="#turntable" data-slide-to="0" class="active"></li>
-                  <li data-target="#turntable" data-slide-to="1"></li>
-                  <li data-target="#turntable" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                  <div class="active item">
-                      <img class="slider1" src="" />
-                      <div class="carousel-caption">
-                        <h4>The NAP process</h4>
-                        <p>The NAP is a process to facilitate effective adaptation in countries through reducing vulnerability to climate change, and facilitating integration of adaptation into development.</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <img class="slider2" src="" />
-                      <div class="carousel-caption">
-                        <h4>The technical guidelines for the NAP process</h4>
-                        <p>The technical guidelines for the NAP process are designed to support countries in their planning and implementation of adaptation at the national level.</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <img class="slider3" src="" />
-                      <div class="carousel-caption">
-                        <h4>The NAP Central</h4>
-                        <p>The NAP Central is the main information platform on supporting the NAP process.</p>
-                      </div>
-                  </div>
-              </div>
-              <a class="carousel-control left" href="#turntable" data-slide="prev">&lsaquo;</a>
-              <a class="carousel-control right" href="#turntable" data-slide="next">&rsaquo;</a>
-          </div>
-          <div class="span1">
-            <div class="row">
-                <div id="caseStudies">
-
-                </div>
-            </div>
-            <div class="row">
-                <div id="globalSupportProgramme" class="infoBoxBorder">
-                  <div hint="Global Support Programme">
-                      <a href="#"><img src="img/global-support.png"/></a>
-                  </div>
-                </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="row visible-desktop visible-tablet">
-        <div id="mainFooter">
-          <div id="hazards" class="span1">
-
-          </div>
-          <div id="sectors" class="span1">
-             <div>
-                <ul>
-                    <li>
-                        <div>
-                            <img src="img/sectorFood.jpg" alt="Agriculture & Food Security" />
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="img/sectorWater.jpg" alt="Water Resources" />
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="img/sectorCoastal.jpg" alt="Coastal Zones" />
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="img/sectorHealth.jpg" alt="Health Options" />
-                        </div>
-                    </li>
+        <div id="elementListCollapse" ng-class="class={'span1':true,'accordion-body':true,'collapse':true,'in':false}">
+          <div class="accordion-inner">
+            <ul  id="elementList">
+              <li ng-repeat="item in getIndex.index" x-monitor-Events ng-click="collapseMenu()">
+                <a href="#" page="/angular-seed/app/content/{{item.element}}.html">Element {{item.element}}</a>
+                <ul id="stepList">
+                  <li ng-repeat="step in item.steps" x-monitor-events ng-click="collapseMenu()">
+                    <a href="#" page="/angular-seed/app/content/{{step}}.html">Step {{step}}</a>
+                  </li>
                 </ul>
-            </div>
+              </li>
+            </ul>
           </div>
-          <div id="dmt" class="span1"></div>
-          <div id="portals" class="span1"></div>
         </div>
-      </div> 
-    </section>
-    <footer>
-      <div class="row visible-phone visible-tablet visible-desktop">
-        <div id="tail"></div>
+        <x-page-navigator id="guidelineNavigator" indexId="#index" contentId="#content" bookmark="1" scrollX="0" scrollY="0"></x-page-navigator>  
       </div>
-    </footer>
+      <div id="content" class="span4">
+      </div>
+    </div>
   </div>
-  <script src="lib/angular/angular.js" type="text/javascript"></script>
   <script src="lib/jquery-2.0.2.min.js" type="text/javascript"></script>
   <script src="lib/bootstrap.js" type="text/javascript"></script>
+  <script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
+  <script src="lib/bootstrap-image-gallery.min.js"></script>
+  <script src="lib/jquery.scrollTo.js" type="text/javascript"></script>
+  <script src="lib/angular/angular.js" type="text/javascript"></script>
+  <script src="lib/angular/angular-mocks.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
+  <script src="js/controller/IndexController.js" type="text/javascript"></script>
+  <script src="js/service/magazineContent.js" type="text/javascript"></script>
+  <script src="js/directives/gallery.js" type="text/javascript"></script>
+  <script src="js/directives/galleryItem.js" type="text/javascript"></script>
+  <script src="js/directives/navigator.js" type="text/javascript"></script>
+  <script src="js/directives/monitor.js" type="text/javascript"></script>
 </body>
+
 </html>
