--- a/angular-seed/app/index.html
+++ b/angular-seed/app/index.html
@@ -9,7 +9,7 @@
     <link href="css/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div role="page">
+  <div role="page" class="ng-cloak">
     <div class="row">
       <div id="index" class="accordion affix" ng-controller="IndexController">
         <div class="accordion-heading">
@@ -37,7 +37,7 @@
   </div>
   <script src="lib/jquery-2.0.2.min.js" type="text/javascript"></script>
   <script src="lib/bootstrap.js" type="text/javascript"></script>
-  <script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
+  <script src="http://blueimp.github.com/JavaScript-Load-Image/js/load-image.min.js"></script>
   <script src="lib/bootstrap-image-gallery.min.js"></script>
   <script src="lib/jquery.scrollTo.js" type="text/javascript"></script>
   <script src="lib/angular/angular.js" type="text/javascript"></script>
